# monkey_actions

./: Cargo.toml  README.md
ui/: app-window.slint
ui/page/: page_action_add.slint  page_action_list.slint  page_settings.slint
ui/widgets/: side_bar.slint
