[package]
name = "MonkeyActions"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"

# slint = { version = "1.8.0", default-features = false, features = [
#     "backend-winit",
#     "renderer-software",
#     "compat-1-2",
# ] }

[build-dependencies]
slint-build = "1.8.0"
